apps/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr

    spec:
      containers:
      - name: sonarr
        # https://github.com/linuxserver/docker-sonarr/releases/latest
        image: lscr.io/linuxserver/sonarr:4.0.14.2939-ls278
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "5Gi"
            cpu: "2000m"
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr-config
          mountPath: /config
        - name: tv
          mountPath: /tv
        # - name: downloads-qbittorrent
        #   mountPath: /downloads
        - name: downloads-sabnzbd
          mountPath: /downloads-sabnzbd
      volumes:
      - name: tv
        nfs:
          server: "10.100.0.1"
          path: /mnt/tank/kubernetes/plex/media/TV
      # - name: downloads-qbittorrent
      #   nfs:
      #     server: "10.100.0.1"
      #     path: /mnt/tank/downloads/qbittorrent-vpn-media
      - name: downloads-sabnzbd
        nfs:
          server: "10.100.0.1"
          path: /mnt/tank/kubernetes/sabnzbd
      - name: sonarr-config
        hostPath:
          path: /lxc-configs/sonarr-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
